# criminal-database

./: .gitignore  CMakeLists.txt  README.md  comparazioneRecord.c  comparazioneRecord.h  enumerazioni.c  enumerazioni.h  funzioniControllo.c  funzioniControllo.h  generazioneCasuale.c  generazioneCasuale.h  inserimentoRecord.c  inserimentoRecord.h  main.c  raccoltaLibrerie.c  raccoltaLibrerie.h  recordSoggetto.c  recordSoggetto.h  stampaRecord.c  stampaRecord.h
